# xuebao

./: .dockerignore  .env  .env.dev  .env.example  .gitignore  AGENTS.md  Dockerfile  Sync-Selfhost-Server.bat  bot.py  docker-compose.yml  install.bat  poetry.toml  pyproject.toml  run.bat  test.py  ytb_cookies.txt
.claude/: settings.local.json
.codex/: version.json
.codex_tmp/: server.env.from-dev
.history/: .env_20260315155456.dev  AGENTS_20260206060925.md  AGENTS_20260423132549.md
.specify/: feature.json  init-options.json  integration.json
config/: ai_model_chains.json  ai_support.json  ai_support_secrets.json  api_support.json  api_support_secrets.json
data/: bison_delivery_state.json  data.db  internal_api.db  problem_tree  problem_tree.json  recorder.db  werewolf  werewolf.db
docs/: ARCHITECTURE.md  CONTROL_MAP.md  DOMAIN_MODEL.md  README.md  api-contracts.md  component-inventory.md  contribution-guide.md  data-models.md  deployment-guide.md  development-guide.md  index.md  law-plugin-multi-layer-state-machine.md  project-context.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
laws/: laws.md  laws.spec.v0.acceptance.md  laws.spec.v0.errata.md  laws.spec.v0.yaml  民主动议重组元老会条例.txt  简明群规.md  紧急防护与代理程序条例.txt  群规FAQ.md  群规·总则.txt  荣誉群主与元老会成员弹劾及职责条例.txt  荣誉群主选举条例.txt  规范层级与立规程序条例.txt
scripts/: backup-data.sh  check_arch.ps1  check_arch.sh  check_layer_imports.py  deploy.sh  validate-deploy-env.sh
src/: app.py
tests/: test_activity_persistence_runtime.py  test_ai_character_switch_trigger.py  test_ai_config_sqlite.py  test_ai_debug_actions.py  test_ai_dialog_runtime_bridge.py  test_ai_group_context.py  test_ai_message_bridge.py  test_ai_model_chain_runtime.py  test_ai_rate_limit_runtime.py  test_ai_tool_feedback_runtime.py  test_app_runtime.py  test_audio2midi_runtime.py  test_award_honor_for_topic_vote_use_case.py  test_bison_music_card_runtime.py  test_check_layer_imports.py  test_codex_bridge_config.py  test_codex_bridge_db.py  test_codex_bridge_runtime.py  test_composition_music_card_runtime.py  test_create_topic_and_charge.py  test_db_runtime.py  test_governance_appendix_runtime.py  test_governance_auto_scan_runtime.py  test_governance_daily_management_runtime.py  test_governance_elder_council_runtime.py  test_idempotency.py  (+35 more)
(+625 files in other folders)
